Fix vertical align issues
[MAILPOET-3073]

--- a/assets/css/src/components/_steps.scss
+++ b/assets/css/src/components/_steps.scss
@@ -40,19 +40,19 @@
 }
 
 .mailpoet-step-badge {
-  align-items: center;
   background: $color-white no-repeat center;
   border: 1px solid $color-tertiary-light;
   border-radius: 50%;
   box-shadow: 0 1px 2px $color-tertiary-light;
   box-sizing: border-box;
-  display: flex;
+  display: block;
   font-size: 10px;
   font-weight: bold;
   height: 20px;
-  justify-content: center;
   line-height: 14px;
   margin: 2px;
+  padding: 3px 0;
+  text-align: center;
   width: 20px;
 
   .mailpoet-step-active & {
@@ -62,6 +62,7 @@
     font-size: 12px;
     height: 24px;
     margin: 0;
+    padding: 5px 0;
     width: 24px;
   }
 
